# pramana-protocol

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  pytest.ini
.github/workflows/: backend.yml  ci.yml  frontend.yml
backend/: Dockerfile  alembic.ini  main.py  requirements-test.txt  requirements.txt
backend/core/: audit.py  bitstring_encoding.py  crypto.py  db.py  demo_metrics.py  did.py  jti_dedup.py  resolver.py  seed.py  settings.py  startup.py  status_issuer.py  status_list.py  status_list_vc.py  tenancy.py  trust_score.py  vc.py  webhooks.py
backend/migrations/: env.py
backend/models/: __init__.py  agent.py  audit_event.py  credential.py  key.py  mandate_spend.py  requirement_intent.py  status_list.py  tenant.py  trust_event.py  (+1 more)
docs/: architecture.md  quickstart.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: demo.sh  demo_full.sh  demo_mcp_auth.py  demo_multi_agent_supply_chain.py  demo_oidc.sh  demo_python_sdk.py  demo_shopping_agent.py  deploy.sh  mint_token.py  set_env_secret.py  smoke.sh
sdk/python/: README.md  pyproject.toml
sdk/python/pramana/: __init__.py  client.py  commerce.py  credentials.py  delegation.py  identity.py
sdk/python/pramana/integrations/: a2a.py  langchain.py  mcp.py
sdk/python/tests/: test_a2a_integration.py  test_commerce.py  test_credentials.py  test_delegation.py  test_hardening_functional.py  test_identity.py  test_langchain_integration.py  test_mcp_integration.py
tests/: README.md
(+155 files in other folders)
